Fix footer on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -220,7 +220,7 @@ a {
     display: block;
   }
   .footer-socials {
-    width: 30%;
+    width: 35%;
     margin: auto;
   }
 }
